examples/bad/static_error_var_not_defined.ps
int a = 13;

{
    int b = 13;
}

println(a * b);